# mxdx

./: .gitignore  .releaserc.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  MANIFEST.md  README.md  manifest  package-lock.json  package.json  test-credentials.toml.example
.beads/: .beads-credential-key  interactions.jsonl  metadata.json
.beads/backup/: backup_state.json  config.jsonl  dependencies.jsonl  events.jsonl  issues.jsonl  labels.jsonl  manifest  v2ga3kvnhtnk7lh4muqlgevrpfdrnuta.darc
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: ci.yml  e2e-beta-perf.yml  release.yml  security-report.yml
client/: package-lock.json  package.json
client/mxdx-client/: package.json
client/mxdx-web-ui/: package.json
crates/mxdx-client/: Cargo.toml
crates/mxdx-client/src/: attach.rs  cancel.rs  cleanup.rs  config.rs  diagnose.rs  identity.rs  lib.rs  liveness.rs  logs.rs  ls.rs  main.rs  matrix.rs  p2p_integration.rs  reconnect.rs  submit.rs  tail.rs  trust.rs
crates/mxdx-client/src/cli/: connect.rs  format.rs  mod.rs
crates/mxdx-client/src/daemon/: handler.rs  mod.rs  sessions.rs  subscriptions.rs
crates/mxdx-client/src/daemon/transport/: mcp.rs  mod.rs  unix.rs  websocket.rs
crates/mxdx-client/src/protocol/: error.rs  methods.rs  mod.rs
crates/mxdx-client/tests/: daemon_integration.rs  e2e_session.rs  integration.rs  integration_session.rs  p2p_wiring.rs
crates/mxdx-coordinator/: Cargo.toml
crates/mxdx-coordinator/src/: claim.rs  config.rs  failure.rs  index.rs  lib.rs  main.rs  router.rs  watchlist.rs
crates/mxdx-coordinator/tests/: integration.rs
crates/mxdx-core-wasm/: Cargo.toml
crates/mxdx-core-wasm/src/: lib.rs
crates/mxdx-fabric/: Cargo.toml
crates/mxdx-fabric-cli/: Cargo.toml  config.example.toml
crates/mxdx-fabric-cli/src/: main.rs
crates/mxdx-fabric/src/: capability_index.rs  claim.rs  coordinator.rs  failure.rs  jcode_worker.rs  lib.rs  process_worker.rs  sender.rs  worker.rs
crates/mxdx-fabric/tests/: e2e_fabric.rs
crates/mxdx-launcher/: Cargo.toml
crates/mxdx-launcher/src/: config.rs  executor.rs  identity.rs  lib.rs  main.rs  multi_hs.rs
crates/mxdx-launcher/src/telemetry/: mod.rs  system.rs
crates/mxdx-launcher/src/terminal/: batcher.rs  compression.rs  mod.rs  pty.rs  recovery.rs  ring_buffer.rs  session.rs  tmux.rs
crates/mxdx-launcher/tests/: e2e_command.rs  e2e_full_system.rs  e2e_public_server.rs  e2e_terminal_session.rs  integration_public_server.rs
crates/mxdx-matrix/: Cargo.toml
crates/mxdx-matrix/src/: backup.rs  client.rs  crypto_envelope.rs  error.rs  lib.rs  multi_hs.rs  reencrypt.rs  rest.rs  rooms.rs  session.rs
crates/mxdx-matrix/tests/: connect.rs  public_server_compat.rs  rest_test.rs  rooms.rs  threading.rs  trybuild_megolm.rs
crates/mxdx-matrix/tests/trybuild/: megolm-constructor-fails.rs  megolm-constructor-fails.stderr
crates/mxdx-p2p/: Cargo.toml  README.md
crates/mxdx-p2p/src/: crypto.rs  lib.rs  turn.rs
crates/mxdx-p2p/src/channel/: mod.rs  native.rs  wasm.rs
crates/mxdx-p2p/src/signaling/: events.rs  glare.rs  mod.rs  parse.rs
crates/mxdx-p2p/src/transport/: driver.rs  idle.rs  matrix_signer.rs  mod.rs  state.rs  verify.rs
crates/mxdx-p2p/tests/: crypto_vectors.rs  glare_resolution.rs  loopback.rs  signaling_parse.rs  signaling_parser_fuzz.rs  signaling_vectors.rs  state_machine.rs  trybuild_sealedkey.rs  turn_smoke.rs  verify_handshake.rs  verify_vectors.rs  wasm_channel.rs  wasm_crypto.rs
crates/mxdx-p2p/tests/fixtures/: crypto-vectors.json  signaling-vectors.json  verify-vectors.json
crates/mxdx-p2p/tests/trybuild/: sealedkey-constructor-fails.rs  sealedkey-constructor-fails.stderr
crates/mxdx-policy/: Cargo.toml  registration.yaml.template
crates/mxdx-policy/src/: appservice.rs  config.rs  lib.rs  main.rs  policy.rs
crates/mxdx-policy/tests/: appservice_registration.rs  policy_enforcement.rs
crates/mxdx-secrets/: Cargo.toml
crates/mxdx-secrets/src/: coordinator.rs  lib.rs  store.rs
crates/mxdx-secrets/tests/: e2e_secret_request.rs  integration_secret_request.rs
crates/mxdx-test-perf/: Cargo.toml
crates/mxdx-test-perf/src/: lib.rs
crates/mxdx-types/: Cargo.toml
crates/mxdx-types/src/: config.rs  identity.rs  keychain_chain.rs  keychain_file.rs  keychain_os.rs  lib.rs  trust.rs
crates/mxdx-types/src/events/: capability.rs  command.rs  fabric.rs  launcher.rs  mod.rs  output.rs  result.rs  secret.rs  session.rs  state_room.rs  telemetry.rs  terminal.rs  webrtc.rs  worker_info.rs
crates/mxdx-web/: Cargo.toml
crates/mxdx-web/src/: main.rs  state.rs
crates/mxdx-web/src/routes/: dashboard.rs  mod.rs  sse.rs  static_files.rs
crates/mxdx-web/static/: manifest.webmanifest  sw.js
crates/mxdx-worker/: Cargo.toml
crates/mxdx-worker/src/: batched_sender.rs  compat.rs  config.rs  executor.rs  heartbeat.rs  identity.rs  lib.rs  main.rs  matrix.rs  output.rs  p2p_integration.rs  retention.rs  session.rs  session_mux.rs  session_persist.rs  state_room.rs  telemetry.rs  tmux.rs  trust.rs  webrtc.rs
crates/mxdx-worker/tests/: bench_latency.rs  beta_server_session.rs  e2e_binary.rs  e2e_binary_beta.rs  e2e_profile.rs  e2e_session.rs  integration.rs  integration_session.rs  p2p_wiring.rs  run_worker.rs  session_lifecycle.rs
docs/: ecosystem-mapping.md  mxdx-architecture.md  mxdx-development-methodology.md  mxdx-management-console.md  quickstart.md
docs/adr/: 0003-wasi-packaging-limitations.md  0004-dashboard-scaling-and-session-preservation.md  0005-worker-capability-advertisement.md  0006-openclaw-fabric-callback-plugin.md  0007-fabric-callback-routing-matrix-outbox.md  0008-secrets-management-and-coordinator-injection.md  2026-03-05-tuwunel-ground-truth.md  2026-04-15-datachannel-rs.md  2026-04-15-mcall-wire-format.md  2026-04-15-megolm-bytes-newtype.md  (+6 more)
scripts/: build-wasm.sh  bump-versions.mjs  check-no-unencrypted-sends.sh  check-perf-streak.sh  e2e-test-suite.sh  fix-stale-federation.mjs  lint-e2e-subprocess.mjs  preflight.sh  publish-crates.sh  publish-npm.sh  purge-test-accounts.mjs
xtask/: Cargo.toml
(+128 files in other folders)
