[package]
name = "mxdx-client"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Client CLI for mxdx: submits tasks, monitors sessions, manages trust"

[[bin]]
name = "mxdx-client"
path = "src/main.rs"

[lib]
name = "mxdx_client"
path = "src/lib.rs"

[dependencies]
mxdx-types = { path = "../mxdx-types", version = "1.1.0" }
mxdx-matrix = { path = "../mxdx-matrix", version = "1.1.0" }
mxdx-p2p = { path = "../mxdx-p2p", version = "1.1.0" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
base64 = { workspace = true }
clap = { version = "4", features = ["derive", "env"] }
dirs = "5"
reqwest = { version = "0.12", features = ["json"] }
urlencoding = "2"
tokio-tungstenite = "0.24"
futures-util = "0.3"
hostname = "0.4"

[dev-dependencies]
tokio = { workspace = true }
mxdx-types = { path = "../mxdx-types", version = "1.1.0" }
mxdx-matrix = { path = "../mxdx-matrix", version = "1.1.0" }
mxdx-test-helpers = { path = "../../tests/helpers" }
base64 = { workspace = true }
tempfile = "3"
