[package]
name = "mxdx-core-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["IdbFactory", "IdbOpenDbRequest"] }
console_error_panic_hook = "0.1"

getrandom = { version = "0.3", features = ["wasm_js"] }
web-time = "1.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

matrix-sdk = { version = "0.16", default-features = false, features = ["e2e-encryption", "js", "indexeddb", "rustls-tls"] }
matrix-sdk-base = { version = "0.16", default-features = false, features = ["experimental-encrypted-state-events"] }

mxdx-types = { path = "../mxdx-types" }

[dev-dependencies]
wasm-bindgen-test = "0.3"
