[package]
name = "mxdx-fabric-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "CLI binary for posting and monitoring fabric tasks"

[[bin]]
name = "fabric"
path = "src/main.rs"

[dependencies]
mxdx-fabric = { path = "../mxdx-fabric", version = "1.1.0" }
mxdx-matrix = { path = "../mxdx-matrix", version = "1.1.0" }
mxdx-types = { path = "../mxdx-types", version = "1.1.0" }
tokio = { workspace = true }
clap = { version = "4", features = ["derive", "env"] }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
toml = { workspace = true }
reqwest = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
urlencoding = "2"
dirs = "6"
