[package]
name = "mxdx-launcher"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mxdx-launcher"
path = "src/main.rs"

[lib]
name = "mxdx_launcher"
path = "src/lib.rs"

[dependencies]
mxdx-types = { path = "../mxdx-types" }
mxdx-matrix = { path = "../mxdx-matrix" }
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
sysinfo = { workspace = true }
uuid = { workspace = true }
base64 = { workspace = true }
flate2 = { workspace = true }

[dev-dependencies]
mxdx-test-helpers = { path = "../../tests/helpers" }
tempfile = { workspace = true }
