[package]
name = "mxdx-launcher"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Fleet management launcher agent for mxdx"

[[bin]]
name = "mxdx-launcher"
path = "src/main.rs"

[lib]
name = "mxdx_launcher"
path = "src/lib.rs"

[features]
default = ["native"]
native = ["dep:mxdx-matrix", "dep:tokio"]

[dependencies]
mxdx-types = { path = "../mxdx-types", version = "1.1.0" }
mxdx-matrix = { path = "../mxdx-matrix", version = "1.1.0", optional = true }
anyhow = { workspace = true }
tokio = { workspace = true, optional = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
sysinfo = { workspace = true }
uuid = { workspace = true }
base64 = { workspace = true }
flate2 = { workspace = true }

[dev-dependencies]
mxdx-test-helpers = { path = "../../tests/helpers" }
mxdx-secrets = { path = "../mxdx-secrets" }
mxdx-policy = { path = "../mxdx-policy" }
tempfile = { workspace = true }
age = { workspace = true }
base64 = { workspace = true }
reqwest = { workspace = true }
