[package]
name = "mxdx-matrix"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Matrix SDK client facade for mxdx with E2EE support"

[dependencies]
mxdx-types = { path = "../mxdx-types", version = "1.1.0" }
matrix-sdk = { workspace = true }
ruma = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
reqwest = { workspace = true }
dirs = "6"
hostname = "0.4"
urlencoding = "2"

[dev-dependencies]
mxdx-test-helpers = { path = "../../tests/helpers" }
uuid = { workspace = true }
toml = { workspace = true }
mockito = "1"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
trybuild = "1"
