[package]
name = "mxdx-p2p"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Platform-agnostic P2P transport, AES-GCM crypto, m.call.* signaling, and TURN client for mxdx interactive sessions"

[features]
# Expose `P2PCrypto::encrypt_with_iv` to the vector-generation binary at
# `tests/bin/gen-vectors.rs`. Never enable in production — deterministic IVs
# with AES-GCM is catastrophically insecure.
vector-gen = []

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = "1"
aes-gcm = { version = "0.10", features = ["zeroize"] }
base64 = { workspace = true }
rand = "0.9"
zeroize = { version = "1", features = ["zeroize_derive"] }
url = { version = "2", default-features = false }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# Native HTTP for TURN credential fetch. Gated off wasm — real wasm HTTP is a
# Phase 8 concern (web-sys fetch). Phase 2 only exposes a stub on wasm.
reqwest = { workspace = true }
tokio = { workspace = true }
# async-trait is used on the internal TurnFetcher abstraction so the refresh
# loop can be tested without a real homeserver.
async-trait = "0.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
# aes-gcm 0.10 pulls rand_core 0.6 -> getrandom 0.2; enable the JS backend for
# wasm32 browser builds.
getrandom = { version = "0.2", features = ["js"] }
# rand 0.9 pulls getrandom 0.3; the workspace .cargo/config.toml sets
# `--cfg getrandom_backend="wasm_js"`, but the 0.3 `wasm_js` feature must also
# be enabled to expose the JS backend module.
getrandom_03 = { package = "getrandom", version = "0.3", features = ["wasm_js"] }

[dev-dependencies]
rand_chacha = "0.9"
trybuild = "1"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
mockito = "1"
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "test-util"] }
