[package]
name = "mxdx-policy"
version = "0.1.0"
edition = "2021"

[dependencies]
mxdx-types = { path = "../mxdx-types" }
mxdx-matrix = { path = "../mxdx-matrix" }
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ruma = { workspace = true }
lru = { workspace = true }
reqwest = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
mxdx-test-helpers = { path = "../../tests/helpers" }
