[package]
name = "mxdx-policy"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Access control and appservice registration for mxdx"

[dependencies]
mxdx-types = { path = "../mxdx-types", version = "0.1.0" }
mxdx-matrix = { path = "../mxdx-matrix", version = "0.1.0" }
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ruma = { workspace = true }
lru = { workspace = true }
reqwest = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
mxdx-test-helpers = { path = "../../tests/helpers" }
