[package]
name = "mxdx-secrets"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mxdx-secrets"
path = "src/main.rs"

[lib]
name = "mxdx_secrets"
path = "src/lib.rs"

[dependencies]
mxdx-types = { path = "../mxdx-types" }
mxdx-matrix = { path = "../mxdx-matrix" }
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
age = { workspace = true }
base64 = { workspace = true }

[dev-dependencies]
mxdx-test-helpers = { path = "../../tests/helpers" }
