[package]
name = "mxdx-secrets"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Age encryption and secret management for mxdx"

[[bin]]
name = "mxdx-secrets"
path = "src/main.rs"

[lib]
name = "mxdx_secrets"
path = "src/lib.rs"

[dependencies]
mxdx-types = { path = "../mxdx-types", version = "0.1.0" }
mxdx-matrix = { path = "../mxdx-matrix", version = "0.1.0" }
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
age = { workspace = true }
base64 = { workspace = true }

[dev-dependencies]
mxdx-test-helpers = { path = "../../tests/helpers" }
