[package]
name = "mxdx-types"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Core type definitions for mxdx fleet management"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
base64 = { workspace = true }
dirs = "5"
keyring = "3"
aes-gcm = "0.10"
sha2 = "0.10"
hostname = "0.4"
whoami = "1"
rand = "0.8"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = { workspace = true }
