[package]
name = "mxdx-web"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mxdx-web"
path = "src/main.rs"

[lib]
name = "mxdx_web"
path = "src/lib.rs"

[dependencies]
mxdx-types = { path = "../mxdx-types" }
axum = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tower-http = { workspace = true }
tower = { workspace = true }
http = { workspace = true }
tokio-stream = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[dev-dependencies]
tower = { workspace = true }
