[package]
name = "mxdx-web"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Web server backend for mxdx management console"

[[bin]]
name = "mxdx-web"
path = "src/main.rs"

[lib]
name = "mxdx_web"
path = "src/lib.rs"

[dependencies]
mxdx-types = { path = "../mxdx-types", version = "1.1.0" }
axum = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tower-http = { workspace = true }
tower = { workspace = true }
http = { workspace = true }
tokio-stream = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[dev-dependencies]
tower = { workspace = true }
