[package]
name = "mxdx-worker"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Worker process for mxdx: connects to Matrix, claims tasks, executes commands"

[[bin]]
name = "mxdx-worker"
path = "src/main.rs"

[lib]
name = "mxdx_worker"
path = "src/lib.rs"

[dependencies]
mxdx-types = { path = "../mxdx-types", version = "1.1.0" }
mxdx-matrix = { path = "../mxdx-matrix", version = "1.1.0" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
hostname = "0.4"
whoami = "1"
sysinfo = { workspace = true }
base64 = { workspace = true }
clap = { version = "4", features = ["derive", "env"] }

[dev-dependencies]
tokio = { workspace = true }
mxdx-types = { path = "../mxdx-types", version = "1.1.0" }
mxdx-matrix = { path = "../mxdx-matrix", version = "1.1.0" }
mxdx-test-helpers = { path = "../../tests/helpers" }
base64 = { workspace = true }
chrono = "0.4"
